Added colors in SASS files

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -4,6 +4,13 @@
 /* DECLARATIONS
 ---------------- */
 
+$dark: #10222B;
+$darkgreen: #95AB63;
+$lightgreen: #BDD684;
+$gray: #E2F0D6;
+$offwhite: #F6FFE0;
+
+
 
 
 /* MIXINS
