--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -3,20 +3,81 @@
 
 /* DECLARATIONS
 ---------------- */
+$darkblue: #225378;
+$teal: #1695A3;
+$lightblue: #ACF0F2;
+$orange: #EB6015;
+$offwhite: #F3FFE2;
 
-$dark: #10222B;
-$darkgreen: #95AB63;
-$lightgreen: #BDD684;
-$gray: #E2F0D6;
-$offwhite: #F6FFE0;
-
-
-
+$philosopher: 'Philosopher', sans-serif;
+$raleway: 'Raleway', sans-serif;
+$roboto: 'Roboto', sans-serif;
 
 /* MIXINS
 ---------- */
 
+@mixin border() {
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
 
+/* GLOBAL
+----------- */
 
-/* GLOBAL STYLES
----------------- */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 62.5%;
+  font-family: $roboto;
+}
+
+input, button {
+  border: none;
+  @include border();
+
+  &:focus {
+    outline: none;
+  }
+
+}
+
+a {
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+ul {
+  list-style: none;
+}
+
+/* HEADER
+---------- */
+
+header {
+  width: 100%;
+  background-color: $darkblue;
+  overflow: hidden;
+
+  .innerHeader {
+    width: 80%;
+    margin: auto;
+  }
+
+  .logo {
+    float: left;
+    color: $offwhite;
+    margin: 0;
+    overflow: hidden;
+    padding: 1.5em;
+
+    p {
+      margin: 0;
+    }
+
+  }
+}
