--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -7,7 +7,7 @@ $darkblue: #225378;
 $teal: #1695A3;
 $lightblue: #ACF0F2;
 $orange: #EB6015;
-$offwhite: #F3FFE2;
+$light: #F3FFE2;
 
 $philosopher: 'Philosopher', sans-serif;
 $raleway: 'Raleway', sans-serif;
@@ -70,7 +70,7 @@ header {
 
   .logo {
     float: left;
-    color: $offwhite;
+    color: $light;
     margin: 0;
     overflow: hidden;
     padding: 1.5em;
@@ -79,6 +79,14 @@ header {
       margin: 0;
     }
 
+  }
+
+  .social {
+    overflow: hidden;
+    float: right;
+    color: white;
+    font-size: 2em;
+    padding: 1em;
   }
 }
 
@@ -92,7 +100,7 @@ header {
 
   aside {
     @include span-columns(3);
-    background-color: $offwhite;
+    background-color: $light;
     height: 100vh;
 
     .innerAside {
