--- a/app/templates/leaderboard.hbs
+++ b/app/templates/leaderboard.hbs
@@ -9,7 +9,7 @@
 <p>Your score is now: {{ score }}</p>
 
 
-</div>
+</div><!--end of congratsDiv-->
 
 
 <div class="leaderboardDiv">
@@ -26,4 +26,4 @@
 </ul>
 
 
-</div>
+</div><!-- end of leaderboardDiv -->
