--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -8,16 +8,17 @@
 <div class="formDiv">
 <form id="loginForm" class="loginForm">
   <input type="text" id="loginusername" placeholder=" username">
-  <input type="text" id="loginpassword" placeholder=" password">
+  <input type="password" id="loginpassword" placeholder=" password">
   <button id="loginButton">Login</button>
 </form>
 </div>
 
 <div class="registerDiv">
+<h2>Register</h2>
 <form id="registerForm" class="registerForm">
-  <input type="text" id="email" placeholder=" email">
+  <input type="email" id="email" placeholder=" email">
   <input type="text" id="regusername" placeholder=" username">
-  <input type="text" id="regpassword" placeholder=" password">
+  <input type="password" id="regpassword" placeholder=" password">
   <button id="registerButton">Register</button>
 
 </form>
