--- a/app/css/main.css
+++ b/app/css/main.css
@@ -50,7 +50,9 @@ header {
     overflow: hidden;
     padding: 1.5em; }
     header .logo p {
-      margin: 0; }
+      margin: 0;
+      font-family: Michroma;
+      font-size: 100pt; }
   header .social {
     overflow: hidden;
     float: right;
