--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -68,7 +68,7 @@ header {
         color: $light;
         margin: 0;
         overflow: hidden;
-        padding: 1.5em;
+        // padding: 1.5em;
     }
     p {
         margin: 0;
@@ -89,14 +89,13 @@ header {
         position: absolute;
         font-size: 30pt;
     }
-}
-
-.social {
-    overflow: hidden;
-    float: right;
-    color: white;
-    font-size: 2em;
-    padding: 1em;
+    .social {
+        overflow: hidden;
+        float: right;
+        color: white;
+        font-size: 2em;
+        padding: 1em;
+    }
 }
 /* SINGLE PAGE VIEW
 ------------------- */
