main view tinkering

--- a/app/templates/leaderboard.hbs
+++ b/app/templates/leaderboard.hbs
@@ -8,6 +8,11 @@
 
 <p>Your score is now: {{ score }}</p>
 
+<div class="keepPlayingDiv">
+  <button class="keepPlaying" id="keepPlaying">Keep Playing</button>
+
+</div>
+
 
 </div><!--end of congratsDiv-->
 
