REVISED LOGO & DRAFT FOR MAIN.VIEW

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -50,21 +50,21 @@ header {
     color: #F3FFE2;
     margin: 0;
     overflow: hidden;
-    padding: 1.5em; }
+    padding: 1em; }
   header p {
     margin: 0;
-    font-family: Michroma;
-    font-size: 120pt;
+    font-family: Electrolize;
+    font-size: 150pt;
     z-index: 1; }
   header span {
-    font-family: Sniglet;
-    font-size: 70pt; }
+    font-family: Fontdiner Swanky;
+    font-size: 55pt; }
   header .fa {
     color: #EB6015;
     z-index: 2;
     display: inline;
-    margin-top: -138px;
-    margin-left: 228px;
+    margin-top: -185px;
+    margin-left: 55px;
     position: absolute;
     font-size: 30pt; }
 
