--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -26,7 +26,7 @@
   {{#each image}}
   <li data-id="{{id}}">
 
-  <img href="#/single" src="{{ rootURL.posts.url }}">
+  <img href="#/main" src="{{ rootURL.posts.url }}">
 
 
 </li>
