--- a/app/css/main.css
+++ b/app/css/main.css
@@ -40,6 +40,7 @@ ul {
 ---------- */
 header {
   width: 100%;
+  height: 20%;
   background-color: #225378;
   overflow: hidden; }
   header .innerHeader {
