saving progress with single view

--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -23,7 +23,10 @@
       <h3>SINGLE PAGE HEADER WILL GO HERE</h3>
 
       <div class="image">
-        <img src="http://placehold.it/350x450">
+        {{#each image}}
+        <img src="{{ url }}">
+        {{/each}}
+        {{!-- <img src="http://placehold.it/350x450"> --}}
         <div class="imageInfo">
           <p>Incorrect so far: {{!-- {{}} --}}</p>
           <p>Correct so far: {{!-- {{}} --}}
