--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -1,7 +1,7 @@
     <aside>
       <div class="innerAside">
         <div class="asideTop">
-          <h4>USERNAME{{!-- {{}} --}}</h4>
+          <h4>{{username}}</h4>
           <div class="avatar">
             <img src="http://placehold.it/100x100">
           </div>
@@ -23,7 +23,7 @@
       <h3>SINGLE PAGE HEADER WILL GO HERE</h3>
 
       <div class="image">
-        <img src="http://placehold.it/350x450">
+        <img src="{{url}}">
         <div class="imageInfo">
           <p>Incorrect so far: {{!-- {{}} --}}</p>
           <p>Correct so far: {{!-- {{}} --}}
