Updated single view

--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -23,8 +23,7 @@
       <h3>SINGLE PAGE HEADER WILL GO HERE</h3>
 
       <div class="image">
-        <img src="{{url}}">
-        <img src="{{ url }}">
+        <img src="{{image_url}}">
         {{!-- <img src="http://placehold.it/350x450"> --}}
         <div class="imageInfo">
           <p>Incorrect so far: {{!-- {{}} --}}</p>
