--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -26,13 +26,14 @@
   {{#each image}}
   <li data-id="{{id}}">
 
-  <img href="#/main" src="{{ rootURL.posts.url }}">
+  <img href="#/single" src="{{ image_url }}">
 
 
 </li>
 
 {{/each}}
 </ul>
+</div>
 
 <div class="deleteDiv">
   <button id="#deleteButton">Delete Account</button>
