main view to single view using image working

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -83,6 +83,10 @@ p#homeButton {
   margin-left: 0;
   float: left; }
 
+.mainImages {
+  width: 70%;
+  float: right; }
+
 /* SINGLE PAGE VIEW
 ------------------- */
 .container {
