--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -111,6 +111,15 @@ p#homeButton {
     margin-left: 0;
     float: left;
 }
+
+
+.mainImages {
+    width: 70%;
+    float: right;
+}
+
+
+
 /* SINGLE PAGE VIEW
 ------------------- */
 
