Added styling to images on main page just to make them look a little better

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -83,6 +83,28 @@ p#homeButton {
   margin-left: 0;
   float: left; }
 
+/* MAIN PAGE VIEW
+------------------ */
+.mainImages {
+  float: right;
+  width: 70%; }
+  .mainImages .imageWrap {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+    background-color: black;
+    border-radius: 4px; }
+    .mainImages .imageWrap img {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      height: 100%;
+      width: auto;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
+
 /* SINGLE PAGE VIEW
 ------------------- */
 .container {
