--- a/app/css/main.css
+++ b/app/css/main.css
@@ -40,48 +40,70 @@ ul {
 ---------- */
 header {
   width: 100%;
-  height: 20%;
   background-color: #225378;
   overflow: hidden; }
   header .innerHeader {
+    overflow: hidden;
     width: 80%;
     margin: auto; }
-  header .logo {
-    float: left;
-    color: #F3FFE2;
-    margin: 0;
+    header .innerHeader .logo {
+      float: left;
+      color: #F3FFE2;
+      margin: 0;
+      overflow: hidden;
+      padding: 1em;
+      display: inline-block;
+      padding: 0; }
+      header .innerHeader .logo .q {
+        overflow: hidden;
+        display: inline-block;
+        position: relative;
+        padding: 0; }
+        header .innerHeader .logo .q p {
+          margin: 0;
+          font-family: Electrolize;
+          font-size: 10em;
+          padding: 0; }
+      header .innerHeader .logo .pic {
+        overflow: hidden;
+        display: inline-block;
+        padding: 0; }
+        header .innerHeader .logo .pic p {
+          font-family: Fontdiner Swanky;
+          font-size: 4em;
+          padding: 0; }
+    header .innerHeader .fa-camera {
+      color: #FF8236;
+      display: inline;
+      position: absolute;
+      font-size: 2.8em;
+      top: 60px;
+      left: 23px; }
+  header .social {
     overflow: hidden;
+    display: inline-block;
+    float: right;
+    font-size: 2em;
     padding: 1em; }
-  header p {
-    margin: 0;
-    font-family: Electrolize;
-    font-size: 150pt;
-    z-index: 1; }
-  header span {
-    font-family: Fontdiner Swanky;
-    font-size: 55pt; }
-  header .fa {
-    color: #EB6015;
-    z-index: 2;
-    display: inline;
-    margin-top: -185px;
-    margin-left: 55px;
-    position: absolute;
-    font-size: 30pt; }
-
-.social {
-  overflow: hidden;
-  float: right;
-  color: white;
-  font-size: 2em;
-  padding: 1em; }
-
-p#logout,
-p#homeButton {
-  font-size: 12pt;
-  color: white;
-  margin-left: 0;
-  float: left; }
+    header .social i {
+      color: #F3FFE2;
+      opacity: .8;
+      cursor: pointer; }
+      header .social i:hover {
+        opacity: 1; }
+  header nav {
+    display: inline-block;
+    color: #F3FFE2;
+    opacity: .8;
+    float: right;
+    padding-top: 2em; }
+    header nav ul {
+      cursor: pointer; }
+      header nav ul li {
+        display: inline;
+        padding: .6em; }
+        header nav ul li:hover {
+          opacity: 1; }
 
 /* MAIN PAGE VIEW
 ------------------ */
