going from single to leaderboard

--- a/app/templates/leaderboard.hbs
+++ b/app/templates/leaderboard.hbs
@@ -2,7 +2,7 @@
 
 <h2>Congrats {{ username }}! You guessed correctly!</h2>
 
-<img src="{{ url }}">
+<img src="{{ image_url }}">
 
 <h3>{{ guessAnswer }}</h3>
 
