--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -8,6 +8,7 @@ $teal: #1695A3;
 $lightblue: #ACF0F2;
 $orange: #FF8236;
 $light: #F3FFE2;
+$background: #FAFAFA;
 $philosopher: 'Philosopher', sans-serif;
 $raleway: 'Raleway', sans-serif;
 $roboto: 'Roboto', sans-serif;
@@ -28,6 +29,7 @@ $roboto: 'Roboto', sans-serif;
 body {
     font-size: 62.5%;
     font-family: $roboto;
+    background-color: $background;
 }
 
 input,
@@ -37,6 +39,14 @@ button {
     &:focus {
         outline: none;
     }
+}
+
+button {
+  background-color: $darkblue;
+
+  &:hover {
+    background-color: $orange;
+  }
 }
 
 a {
@@ -165,7 +175,6 @@ header {
       width: 250px;
       height: 250px;
       overflow: hidden;
-      background-color: black;
       border-radius: 4px;
 
         img {
@@ -187,10 +196,12 @@ header {
 .container {
     overflow: hidden;
     @include outer-container(100%);
+
     aside {
         @include span-columns(3);
         background-color: $light;
         height: 100vh;
+
         .innerAside {
             width: 90%;
             margin: auto;
@@ -215,10 +226,42 @@ header {
             li {}
         }
     }
+
+    .singleWrap {
+      overflow: hidden;
+      @include span-columns(9);
+
+    }
+
     .singleMain {
-        @include span-columns(9);
+      background-color: white;
+        margin: auto;
         text-align: center;
         margin-top: 2em;
+        width: 80%;
+        border: 1px solid #EDEEEE;
+        margin-bottom: 5em;
+
+        .image {
+
+          img {
+            width: 100%;
+          }
+
+
+          .imageInfo {
+
+            p {
+
+              span {
+                color: $teal;
+                font-weight: bold;
+                font-size: 1.3em;
+              }
+            }
+          }
+        }
+
     }
 }
 
