--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -19,8 +19,9 @@
         </div>
     </aside>
 
+  <div class="singleWrap">
     <div class="singleMain">
-      <h3>SINGLE PAGE HEADER WILL GO HERE</h3>
+      <h3>Take Your Guess!</h3>
 
       <div class="image">
         <img src="{{image_url}}">
@@ -29,17 +30,17 @@
           <p>Incorrect so far: {{!-- {{}} --}}</p>
           <p>Correct so far: {{!-- {{}} --}}
           </p>
-          <p>Posted by {{!-- {{}} --}}</p>
+          <p>Posted by <span>{{owner}}<span></p>
 
-          <!-- would be cool to add div with user's score and addClass show on hover to this information -->
+          <!-- would be cool to add div with user's score and addClass show on hover for this information -->
 
         </div>
       </div>
 
     <form class="guessInput" id="guessInput">
       <input type="text" placeholder="What's your guess?" id="guess" class="guess">
-      <button id="guessBtn" class="guessBtn">Submit Guess</button>
+      <button id="guessBtn" class="guessBtn">Check it!</button>
     </form>
 
     </div>
-
+  </div>
