--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -21,7 +21,8 @@
 
   <div class="singleWrap">
     <div class="singleMain">
-      <h3>Take Your Guess!</h3>
+      <i class="fa fa-camera"></i>
+      <p>posted by <span>{{owner}}<span></p>
 
       <div class="image">
         <img src="{{image_url}}">
@@ -30,7 +31,6 @@
           <p>Incorrect so far: {{!-- {{}} --}}</p>
           <p>Correct so far: {{!-- {{}} --}}
           </p>
-          <p>Posted by <span>{{owner}}<span></p>
 
           <!-- would be cool to add div with user's score and addClass show on hover for this information -->
 
