--- a/app/css/main.css
+++ b/app/css/main.css
@@ -180,13 +180,24 @@ header {
     background-color: white;
     margin: auto;
     text-align: center;
-    margin-top: 2em;
+    margin-top: 5em;
     width: 80%;
     border: 1px solid #EDEEEE;
-    margin-bottom: 5em; }
+    margin-bottom: 5em;
+    position: relative; }
+    .container .singleMain .fa-camera {
+      position: absolute;
+      top: 1.5em;
+      left: 1em;
+      font-size: 1.5em; }
+    .container .singleMain p {
+      float: left;
+      padding: 1em;
+      margin: 0;
+      padding-left: 2.5em; }
+      .container .singleMain p span {
+        color: #1695A3;
+        font-weight: bold;
+        font-size: 1em; }
     .container .singleMain .image img {
       width: 100%; }
-    .container .singleMain .image .imageInfo p span {
-      color: #1695A3;
-      font-weight: bold;
-      font-size: 1.3em; }
