--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -21,6 +21,10 @@
 
 <div class="mainImages">
   <h2>LET'S PLAY!</h2>
+  <a href="/#newpost"><div class="newpost">
+    <i class="fa fa-camera"></i>
+    <p>Add a new post</p>
+  </div></a>
 
   <ul class="small-block-grid-3">
   {{#each image}}
