--- a/app/templates/newpost.hbs
+++ b/app/templates/newpost.hbs
@@ -1,5 +1,10 @@
-<form id="postImage" class="postImage">
-  <input type="text" placeholder="image url" id="image_url">
-  <input type="text" placeholder="answer" id="answer">
-  <button id="submitPost">Add Post</button>
-</form>
+<div class="newpostMain">
+
+  <form id="postImage" class="postImage">
+    <input type="text" placeholder="Image URL" id="image_url">
+    <input type="text" placeholder="Answer" id="answer">
+    <input type="text" placeholder="Add a hint here" id="hint">
+    <button id="submitPost">Add Post</button>
+  </form>
+
+</div>
