DELETED TEMPLATES TO AVOID MERGE CONFLICTS BY RUNNING GULP HANDLEBARS

--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -28,6 +28,8 @@
   {{#each image}}
   <li data-id="{{id}}">
   <img href="#/single" src="{{ image_url }}">
+  {{!-- TRINI ADDED THIS --}}
+  <li data-id="{{ owner }}"> + "{{ solved }}"
   </li>
   {{/each}}
   </ul>
