RENDER FILE UPDATED TO LINK THE OWNER AND THE NUMBER OF SOLVED/CORRECT/INCORRECT ANSWERS

--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -28,7 +28,7 @@
   {{#each image}}
   <li data-id="{{id}}">
   <img href="#/single" src="{{ image_url }}">
-  {{!-- TRINI ADDED THIS --}}
+  {{!-- TRINI ADDED THIS FOR OWNER & NUMBER OF CORRECT/INCORRECT ANSWERS --}}
   <li data-id="{{ owner }}"> + "{{ solved }}"
   </li>
   {{/each}}
