Commented out some additions on main view

--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -34,10 +34,10 @@
     </div>
 
   {{!-- TRINI ADDED THIS FOR OWNER & NUMBER OF CORRECT/INCORRECT ANSWERS --}}
-  <li data-id="{{ owner }}"> + "{{ solved }}"
+{{!--   <li data-id="{{ owner }}"> + "{{ solved }}">
 
 
-  </li>
+  </li> --}}
   {{/each}}
   </ul>
   </div>
