OWNER OF PICTURES AND SOLVED ADDED TO MAIN.VIEW AND HBS

--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -34,7 +34,7 @@
     </div>
 
   {{!-- TRINI ADDED THIS FOR OWNER & NUMBER OF CORRECT/INCORRECT ANSWERS --}}
-  <li data-id="{{ owner }}"> + "{{ solved }}"
+  <li data-id="{{ user_id }}"> "{{ owner }}" "{{ answer }}"
 
 
   </li>
