--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -31,10 +31,10 @@
   <li data-id="{{id}}">
     <div class="imageWrap">
       <a href="#/single/{{id}}"><img src="{{ image_url }}"></a>
-    </div>
+
 
   {{!-- TRINI ADDED THIS FOR OWNER & NUMBER OF CORRECT/INCORRECT ANSWERS --}}
-  <li data-id="{{ user_id }}"> "{{ owner }}" "{{ answer }}"
+{{!--   <li data-id="{{ user_id }}"> "{{ owner }}" "{{ answer }}" --}}
 
 
   </li>
