--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -31,13 +31,16 @@
   <li data-id="{{id}}">
     <div class="imageWrap">
       <a href="#/single/{{id}}"><img src="{{ image_url }}"></a>
+          <li data-id="{{ user_id }}"> "{{ owner }}" "{{ answer }}" "{{solved_by}}"</li>
     </div>
 
   {{!-- TRINI ADDED THIS FOR OWNER & NUMBER OF CORRECT/INCORRECT ANSWERS --}}
 
-    <li data-id="{{ user_id }}"> "{{ owner }}" "{{ answer }}" "{{solved_by}}"</li>
-  {{/each}}
+{{!--     <li data-id="{{ user_id }}"> "{{ owner }}" "{{ answer }}" "{{solved_by}}"</li> --}}
+</li>
+{{/each}}
   </ul>
+
   </div>
 
 <div class="deleteDiv">
