Trying to fix things

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -170,7 +170,7 @@ header {
 
 .mainImages {
     float: right;
-    width: 70%;
+    width: 100%;
 
     h2 {
       display: inline-block;
@@ -231,43 +231,9 @@ header {
 
 .container {
     overflow: hidden;
-    @include outer-container(100%);
-
-    aside {
-        @include span-columns(3);
-        background-color: $light;
-        height: 100vh;
-        overflow: hidden;
-        clear: both;
-
-        .innerAside {
-            width: 90%;
-            margin: auto;
-            text-align: center;
-            h4 {
-                margin-top: 1em;
-            }
-        }
-        .asideTop {
-            margin-top: 2em;
-            border-bottom: 1px solid $darkblue;
-            .avatar {
-                margin: 2em;
-                img {
-                    border-radius: 50%;
-                }
-            }
-        }
-        ul {
-            margin: 0;
-            margin-top: 1em;
-            li {}
-        }
-    }
 
     .singleWrap {
       overflow: hidden;
-      @include span-columns(9);
 
     }
 
@@ -324,6 +290,43 @@ header {
 
     }
 }
+
+aside {
+  @include span-columns(3);
+  background-color: $light;
+  height: 100vh;
+  overflow: hidden;
+  clear: both;
+
+  .innerAside {
+    width: 90%;
+    margin: auto;
+    text-align: center;
+
+    h4 {
+      margin-top: 1em;
+    }
+  }
+  .asideTop {
+    margin-top: 2em;
+    border-bottom: 1px solid $darkblue;
+    .avatar {
+      margin: 2em;
+
+      img {
+        border-radius: 50%;
+      }
+    }
+  }
+  ul {
+    margin: 0;
+    margin-top: 1em;
+
+      li {
+
+      }
+    }
+  }
 
 /* NEW POST VIEW
 ----------------- */
