--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -17,3 +17,6 @@
           </ul>
         </div>
         </div>
+<div class="deleteDiv">
+  <button id="#deleteButton">Delete Account</button>
+</div>
