--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -10,14 +10,18 @@
   <ul class="small-block-grid-3">
   {{#each image}}
   <li data-id="{{id}}">
+
     <div class="imageWrap">
-      <a href="#/single/{{id}}"><img src="{{ image_url }}"></a>
+      <div class="actualImage">
+        <a href="#/single/{{id}}"><img src="{{ image_url }}"></a>
+      </div>
+      <p>posted by: {{owner}}</p>
+      <p>first solved by: {{solved_by}}</p>
     </div>
+
   </li>
   {{/each}}
   </ul>
+
 </div>
 
-<div class="deleteDiv">
-  <button id="#deleteButton">Delete Account</button>
-</div>
