--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -6,7 +6,7 @@
             <img src="http://placehold.it/100x100">
           </div>
           <div class="score">
-            <p>Current score: {{!-- {{}} --}}</p>
+            <p>Current score: {{points}}</p>
           </div>
         </div>
         <div class="leaderboardSection">
@@ -17,3 +17,7 @@
           </ul>
         </div>
         </div>
+
+<div class="deleteDiv">
+  <button id="#deleteButton">Delete Account</button>
+</div>
