--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -207,21 +207,21 @@ header {
     }
 
     .imageWrap {
-      position: relative;
+      // position: relative;
       width: 250px;
       height: 250px;
       overflow: hidden;
       border-radius: 4px;
 
         img {
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          height: 100%;
-          width: auto;
-          -webkit-transform: translate(-50%,-50%);
-          -ms-transform: translate(-50%,-50%);
-          transform: translate(-50%,-50%);
+          // position: absolute;
+          // left: 50%;
+          // top: 50%;
+          // height: 100%;
+          // width: auto;
+          // -webkit-transform: translate(-50%,-50%);
+          // -ms-transform: translate(-50%,-50%);
+          // transform: translate(-50%,-50%);
         }
     }
 }
