--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -6,13 +6,19 @@
   </div></a>
 
   <ul class="small-block-grid-3">
-  {{#each image}}
-  <li data-id="{{id}}">
-    <div class="imageWrap">
-      <a href="#/single/{{id}}"><img src="{{ image_url }}"></a>
+{{#each image}}
+ <li data-id="{{id}}">
 
-  </li>
-  {{/each}}
+   <div class="imageWrap">
+     <div class="actualImage">
+       <a href="#/single/{{id}}"><img src="{{ image_url }}"></a>
+     </div>
+     <p>posted by: {{owner}}</p>
+     <p>first solved by: {{solved_by}}</p>
+   </div>
+
+ </li>
+ {{/each}}
   </ul>
 </div>
 
