--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -16,6 +16,7 @@
          </div>
          <p>posted by: {{owner}}</p>
          <p>first solved by: {{solved_by}}</p>
+         <P>hint: {{hint}}</p>
        </div>
 
      </li>
